# dstate

./: CHANGELOG.md  Cargo.toml  README.md
docs/: distributed-state-design-history.md  distributed-state-design.md  distributed-state-dev-plan.md  distributed-state-test-plan.md  e2e-test-plan.md  integration-test-plan.md  ractor-e2e-test-plan.md
dstate/: Cargo.toml
dstate-dactor/: Cargo.toml
dstate-dactor/src/: lib.rs  messages.rs  state_actor.rs
dstate-dactor/tests/: state_actor_tests.rs
dstate-e2e/: Cargo.toml
dstate-e2e/src/: cluster.rs  interceptor.rs  lib.rs  scenarios.rs  transport.rs
dstate-e2e/tests/: kameo_e2e.rs  ractor_e2e.rs
dstate-integration/: Cargo.toml
dstate-integration/src/: cluster.rs  interceptor.rs  lib.rs  shell.rs  transport.rs
dstate-integration/tests/: chaos_tests.rs  dactor_mock_tests.rs  fault_injection_tests.rs  happy_path_tests.rs  harness_tests.rs  stress_tests.rs  upgrade_tests.rs
dstate-kameo/: Cargo.toml  README.md
dstate-kameo/examples/: node_resource.rs
dstate-kameo/src/: cluster.rs  lib.rs  runtime.rs
dstate-kameo/tests/: adapter_tests.rs
dstate-ractor/: Cargo.toml  README.md
dstate-ractor/examples/: node_resource.rs
dstate-ractor/src/: cluster.rs  lib.rs  runtime.rs
dstate-ractor/tests/: adapter_tests.rs
dstate/examples/: engine_demo.rs  node_resource.rs
dstate/src/: engine.rs  lib.rs  registry.rs
dstate/src/core/: change_feed_logic.rs  delta_accumulator.rs  diagnostics.rs  lifecycle_logic.rs  mod.rs  persistence_startup_logic.rs  shard_core.rs  startup_logic.rs  sync_logic.rs  versioning_logic.rs  view_map.rs
dstate/src/messages/: feed_msg.rs  mod.rs  shard_msg.rs  sync_msg.rs
dstate/src/test_support/: mod.rs  test_persist.rs  test_runtime.rs  test_state.rs
dstate/src/traits/: mod.rs  persistence.rs  runtime.rs  state.rs
dstate/src/types/: config.rs  envelope.rs  errors.rs  mod.rs  node.rs  sync_message.rs
dstate/tests/: clock_and_doubles_tests.rs  envelope_tests.rs  error_tests.rs  registry_tests.rs  runtime_tests.rs  state_model_tests.rs  sync_integration_tests.rs  wire_protocol_tests.rs
