[package]
name = "dstate-e2e"
version = "0.1.0"
edition = "2021"
description = "End-to-end integration tests for dstate adapter crates"
license = "MIT"
publish = false

[dependencies]
dstate = { path = "../dstate" }
dstate-ractor = { path = "../dstate-ractor" }
dstate-kameo = { path = "../dstate-kameo" }
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
