[package]
name = "dstate-integration"
version = "1.0.0"
edition = "2021"
description = "Integration tests for the dstate distributed state crate"
license = "MIT"
publish = false

[dependencies]
dstate = { path = "../dstate" }
bincode = "1"
serde = { version = "1", features = ["derive"] }
dactor = { version = "0.2", features = ["test-support"] }
dactor-mock = "0.2"
async-trait = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }

[dev-dependencies]
