[package]
name = "dstate-kameo"
version = "0.1.0"
edition = "2021"
description = "Kameo adapter for the dstate distributed state crate"
license = "MIT"

[dependencies]
dstate = { path = "../dstate" }
kameo = "0.19.2"
tokio = { version = "1", features = ["time", "rt", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
