[package]
name = "dstate-ractor"
version = "0.1.0"
edition = "2021"
description = "Ractor adapter for the dstate distributed state crate"
license = "MIT"

[dependencies]
dstate = { path = "../dstate" }
ractor = "0.15"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
