[package]
name = "dstate-ractor"
version = "0.1.0"
edition = "2021"
description = "Ractor adapter for the dstate distributed state crate"
license = "MIT"
repository = "https://github.com/Yaming-Hub/dstate"
homepage = "https://github.com/Yaming-Hub/dstate"
readme = "README.md"
keywords = ["distributed", "state", "replication", "ractor", "actor"]
categories = ["concurrency", "network-programming"]

[dependencies]
dstate = { version = "0.1.0", path = "../dstate" }
ractor = "0.15"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
