[package]
name = "dstate"
version = "1.1.0"
edition = "2021"
description = "Distributed state replication across actor-based clusters"
license = "MIT"
repository = "https://github.com/Yaming-Hub/dstate"
homepage = "https://github.com/Yaming-Hub/dstate"
readme = "../README.md"
keywords = ["distributed", "state", "replication", "actor", "crdt"]
categories = ["concurrency", "network-programming"]

[dependencies]
arc-swap = "1"
async-trait = "0.1"
bincode = "1"
dactor = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-test = "0.2"
